ref: some theme changes

--- a/emacs.org
+++ b/emacs.org
@@ -395,7 +395,11 @@ Emacs should not polute my init.el
 
   (use-package leuven-theme
     :ensure t
-    :init (load-theme 'leuven t))
+    :init
+    (load-theme 'leuven t)
+    (custom-theme-set-faces
+     'leuven
+     `(hl-line ((t (:background "#F6FECD"))))))
 #+end_src
 
 ** Helpers
@@ -1075,14 +1079,12 @@ We want to be able to edit CMake files in a sane way.
    Unclutters my mode line (e.g. hides minor modes).
 
 #+begin_src emacs-lisp
-  (use-package smart-mode-line-powerline-theme
-    :ensure t)
   (use-package smart-mode-line
     :ensure t
     :pin melpa-stable
     :commands smart-mode-line sml/setup
     :init (progn
-            (setq sml/theme 'light-powerline)
+            (setq sml/theme 'light)
             (if after-init-time (sml/setup)
               (add-hook 'after-init-hook 'sml/setup)))
 
