--- a/emacs.org
+++ b/emacs.org
@@ -1464,7 +1464,8 @@ When using OS X, the =ls= doesn't support =--dired=
     :commands alchemist-mode
     :after elixir-mode
     :init (progn
-            (add-hook 'elixir-mode-hook 'alchemist-mode)))
+            (add-hook 'elixir-mode-hook 'alchemist-mode))
+    :config (setq alchemist-hooks-compile-on-save t))
 #+end_src
 
 ** helm
