--- a/emacs.org
+++ b/emacs.org
@@ -395,12 +395,18 @@ Emacs should not polute my init.el
        default)))
 
   (use-package leuven-theme
+    :disabled
     :ensure t
     :init
     (load-theme 'leuven t)
     (custom-theme-set-faces
      'leuven
      `(hl-line ((t (:background "#F6FECD"))))))
+
+  (use-package cyberpunk
+    :ensure t
+    :init
+    (load-theme 'cyberpunk t))
 #+end_src
 
 ** Helpers
@@ -1092,7 +1098,7 @@ We want to be able to edit CMake files in a sane way.
     :pin melpa-stable
     :commands smart-mode-line sml/setup
     :init (progn
-            (setq sml/theme 'light)
+            (setq sml/theme 'dark)
             (if after-init-time (sml/setup)
               (add-hook 'after-init-hook 'sml/setup)))
 
